...
        Tim Salonko
      </Text>

      <Text style={unsubscribeText}>
        Ne želite više ove emailove?{" "}
        <Link href={unsubscribeUrl} style={unsubscribeLink}>
          Odjavite se
        </Link>
      </Text>
    </BaseEmail>
  );
}

...
