...
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          headerShown: false,
          title: "Više",
          tabBarLabel: "Više",
          tabBarIcon: ({ color, size, focused }) => (
            <PoppingTabIcon icon={MoreHorizontal} color={color} size={size} focused={focused} />
          ),
        }}
      />
...
